[package]
name = "tinyrenderer"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.8.7"
wavefront_obj = "7.0.0"
image = { version = "0.23.4", default-features = false, features = ["png"] }
anyhow = "1.0.31"
